FIX:adjusting code size and fixing z-index from input and buttons

--- a/main.css
+++ b/main.css
@@ -18,7 +18,7 @@ body {
     max-width: 1366px;
     width: 100%;
     margin: 0 auto;
-    padding: 32px 16px; /* Reduz o padding para telas menores */
+    padding: 32px 16px;
 }
 
 header {
@@ -58,6 +58,8 @@ form input, button {
     text-decoration: none;
     font-size: 16px;
     border-radius: 6px;
+    position: relative;
+    z-index: 10;
 }
 
 #vizualizar {
@@ -109,14 +111,13 @@ button {
     border-bottom: 1px solid #555;
     text-align: center;
     font-size: 30px;
-    text-align: center;
     margin-bottom: 10px;
 }
 
 .cracha img {
     float: left;
-    width: 80%;
-    margin-left: 10%;
+    width: 90%;
+    margin-left: 5%;
     clear: left;
 }
 
@@ -132,7 +133,6 @@ img {
     text-align: center;
     font-size: 25px;
     line-height: 1cm;
-    text-align: center;
 }
 
 .divRodape {
@@ -144,7 +144,6 @@ img {
     text-align: center;
     font-size: 20px;
     line-height: 1cm;
-    text-align: center;
 }
 
 footer {
